# grey-ai-linkedin

./: .gitignore  CLAUDE.md  README.md
competitors/: watchlist.md
drafts/: 2026-02-13-ai-gave-me-garbage-micro-lesson.md  2026-02-13-ai-training-that-teaches-nothing-relatable-rant.md  2026-02-13-frozen-middle-pattern-interrupt.md  2026-02-13-manager-ai-mistakes-micro-lesson.md  2026-02-13-strategy-execution-gap-pattern-interrupt.md  2026-02-14-15-minute-automation-win-micro-lesson.md  2026-02-14-ai-dating-teaches-ai-at-work-pattern-interrupt.md  2026-02-14-ai-doesnt-know-you-micro-lesson.md  2026-02-14-ai-ghostwriting-your-life-relatable-rant.md  2026-02-14-ai-wont-replace-you-needs-update-pattern-interrupt.md  2026-02-14-healthcare-ai-trust-gap-pattern-interrupt.md  2026-02-14-operations-director-spark-case-study.md  2026-02-14-prompting-patterns-that-work-micro-lesson.md  2026-02-16-ai-training-leaves-90-percent-behind-pattern-interrupt.md  2026-02-17-your-spreadsheet-is-the-problem-relatable-rant.md  2026-02-18-ai-agents-are-here-micro-lesson.md  2026-02-18-ai-delegation-gap-pattern-interrupt.md  2026-02-18-everyone-says-people-first-relatable-rant.md  2026-02-18-prompt-framework-industrial-complex-relatable-rant.md  2026-02-18-you-dont-need-a-program-pattern-interrupt.md  2026-02-19-nurse-ai-documentation-case-study.md  2026-02-20-ai-star-player-bottleneck-pattern-interrupt.md  ai-valentines.md  (+11 more)
linkedin-mcp-local/: pyproject.toml
linkedin-mcp-local/linkedin_mcp_server/scraping/: extractor.py  fields.py
linkedin-mcp-local/linkedin_mcp_server/tools/: person.py
(+24 files in other folders)
