[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-scraper-mcp-local"
version = "4.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.0",
    "inquirer>=3.4.0",
    "patchright>=1.40.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
linkedin-mcp-server = "linkedin_mcp_server.cli_main:main"
linkedin-scraper-mcp = "linkedin_mcp_server.cli_main:main"

[tool.hatch.build.targets.wheel]
packages = ["linkedin_mcp_server"]
